created a package.json, .gitignore and added a bit of code to the items handlebars files

--- a/views/items2.handlebars
+++ b/views/items2.handlebars
@@ -1,6 +1,16 @@
 <div id="items2">
     <div class="container-custom">
         <div>
+            <!-- (main) NAV BAR --->
+
+            <!-- NAV BAR: all, recent & conversations -->
+
+            <div id="box">
+                <div id="items2-box">
+
+
+                </div>
+            </div>
 
 
 
