--- a/views/items3.handlebars
+++ b/views/items3.handlebars
@@ -1,6 +1,16 @@
 <div id="items3">
     <div class="container-custom">
         <div>
+            <!-- (main) NAV BAR --->
+
+            <!-- NAV BAR: all, recent & conversations -->
+
+            <div id="box">
+                <div id="items3-box">
+
+
+                </div>
+            </div>
 
 
 
