--- a/views/items1.handlebars
+++ b/views/items1.handlebars
@@ -1,6 +1,16 @@
 <div id="items1">
     <div class="container-custom">
         <div>
+            <!-- (main) NAV BAR --->
+
+            <!-- NAV BAR: all, recent & conversations -->
+
+            <div id="box">
+                <div id="items1-box">
+
+
+                </div>
+            </div>
 
 
 
